--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
         -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>2.8.2</version>
+		</dependency>
          <dependency>
 		    <groupId>org.glassfish.jersey.media</groupId>
 		    <artifactId>jersey-media-json-jackson</artifactId>
@@ -79,8 +84,7 @@
 		<dependency>
 		    <groupId>org.glassfish.jersey.test-framework.providers</groupId>
 		    <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-		    <version>2.26-b08</version>
-		</dependency>
+		    </dependency>
     </dependencies>
     <properties>
         <jersey.version>2.26-b08</jersey.version>
