--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,13 @@
 		<dependency>
 		    <groupId>org.glassfish.jersey.test-framework.providers</groupId>
 		    <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-		    </dependency>
+	    </dependency>
+	    <!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.26-b08</jersey.version>
