--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,16 @@
 		    <version>1.1</version>
 		    <type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.10.Final</version>
+		</dependency>
+		<dependency>
+	    		<groupId>mysql</groupId>
+	    		<artifactId>mysql-connector-java</artifactId>
+	    		<version>6.0.6</version>
+		</dependency>
     </dependencies>
     <properties>
         <jersey.version>2.26-b08</jersey.version>
